--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                         <li class="icon fa-cutlery"> 
                             <h3>What to Schwenk</h3> 
                             <p>You will get some jummy recipies, to know what you can Schwenk.</p>
-                        </li>                                                                           
+                        </li>                         
                     </ul>                     
                 </div>                 
             </section>             
@@ -169,17 +169,14 @@
                     </li>                     
                     <li>
                         <a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a>
-                    </li>                     
-                    <li>
-                        <a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a>
-                    </li>                     
+                    </li>                                          
                     <li>
                         <a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a>
                     </li>                     
                 </ul>                 
                 <ul class="copyright"> 
-                    <li>&copy; Untitled</li>
-                    <li>Design: 
+                    <li>© 2017 Schwenktheworld</li>
+                    <li>DESIGN:&nbsp;BG And&nbsp;
                         <a href="http://html5up.net">HTML5 UP</a>
                     </li>                     
                 </ul>                 
