--- a/index.html
+++ b/index.html
@@ -94,8 +94,9 @@
                 <section class="spotlight"> 
                     <div class="image">
                         <a>
-                            <video></video>
-                            <img src="images/LegalizeTheSchwenking.jpg" alt="Legalize it - SchwenkTheWorld" />
+                            <div class="video-container">
+                                <iframe width="100%" height="310px" src="https://www.youtube.com/embed/TpWHJFSLYbQ?rel=0" frameborder="0" allowfullscreen></iframe>                                 
+                            </div>
                         </a>
                     </div>
                     <div class="content"> 
@@ -169,7 +170,7 @@
                     </li>                     
                     <li>
                         <a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a>
-                    </li>                                          
+                    </li>                     
                     <li>
                         <a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a>
                     </li>                     
