--- a/krefolio/index.html
+++ b/krefolio/index.html
@@ -613,50 +613,13 @@ Becoming a Schwenker <span class="light-text main-color">The ultimate guide</spa
        Send Message
     ============================== -->
         <section id="send-message" class="send-message main-bg white-color text-center">
-            <div class="send-icon" data-toggle="modal" data-target="#contact-form">
-                <i class="fa fa-paper-plane"></i>
+            <div class="row">
+                <p class="light-text">Here you can see the work of our ambassadors on <span class="bold-text">Instagram</span></p>
+                <div class="col-xs-12 text-center">
+                    <iframe src="//users.instush.com/h-slider/?cols=4&round=true&circle=false&pin=false&user_id=1342199658&username=refugeentredeuxeaux&sid=-1&susername=-1&tag=-1&stype=mine&t=999999JRcUEgeyhvBtfwGxhTWQmJd2ie7YvNfEc_J4r33F9sVV1CY-r3sOfiNTsnb_-_iqwyJKl_j-Ijk" allowtransparency="true" frameborder="0" scrolling="no" style="width:100%;height:190px;border:none;overflow:visible;" class="embed-responsive"></iframe>
+                </div>
             </div>
-            <p class="light-text">Have any <span class="bold-text">project</span>? Send a <span class="bold-text">message</span></p>
-            <!-- Contact Form Modal -->
-            <div class="modal fade contact-form" id="contact-form" tabindex="-1" role="dialog" aria-labelledby="contact-form" aria-hidden="true">
-                <div class="modal-dialog modal-lg">
-                    <div class="modal-content">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">×</span>
-                        </button>
-                        <div class="modal-body">
-                            <!-- *****  Contact form ***** -->
-                            <form class="form" id="contact-form">
-                                <div class="row">
-                                    <div class="form-group col-md-6">
-                                        <input type="text" class="form-control" id="first-name" placeholder="First name">
-                                    </div>
-                                    <div class="form-group col-md-6">
-                                        <input type="text" class="form-control" id="last-name" placeholder="Last name">
-                                    </div>
-                                    <div class="form-group col-md-6">
-                                        <input type="email" class="form-control" id="email" placeholder="Email address">
-                                    </div>
-                                    <div class="form-group col-md-6">
-                                        <input type="text" class="form-control" id="project-name" placeholder="Project name">
-                                    </div>
-                                    <div class="form-group col-md-12 mab-none">
-                                        <textarea rows="6" class="form-control" id="description" placeholder="Your project details and description ..."></textarea>
-                                    </div>
-                                    <div class="form-group col-md-12">
-                                        <button class="button bold-text main-bg">
-                                            <i class="fa fa-paper-plane"></i>
-                                        </button>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>                         
-                        <!-- *** end modal-body *** -->
-                    </div>                     
-                    <!-- *** end modal-content *** -->
-                </div>                 
-                <!-- *** end modal-dialog *** -->
-            </div>             
+            <!-- Contact Form Modal -->             
             <!-- *** end Contact Form modal *** -->
         </section>         
         <!-- *** end Send Message *** -->
@@ -668,11 +631,9 @@ Becoming a Schwenker <span class="light-text main-color">The ultimate guide</spa
                 <div class="row">
                     <div class="col-md-10 col-md-offset-1">
                         <figure class="margin-bottom-medium">
-                            <img src="img/logo.png" class="footer-logo" alt="Krefolio">
+                            <h2>SchwenkTheWorld</h2>
                         </figure>
-                        <p class="margin-bottom-medium">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+                        <p class="margin-bottom-medium">If you like this project if you want to be a part of it, downlaod the ultimate guide and start schwenking and share it with the Hashtag #schwenktheworld</p>
                         <!-- =========================
                        Social icons
                     ============================== -->
@@ -680,30 +641,15 @@ Becoming a Schwenker <span class="light-text main-color">The ultimate guide</spa
                             <li class="facebook hvr-pulse">
                                 <a href="#"><i class="fa fa-facebook"></i></a>
                             </li>
-                            <li class="twitter hvr-pulse">
-                                <a href="#"><i class="fa fa-twitter"></i></a>
-                            </li>
-                            <li class="g-plus hvr-pulse">
-                                <a href="#"><i class="fa fa-google-plus"></i></a>
-                            </li>
-                            <li class="linkedin hvr-pulse">
-                                <a href="#"><i class="fa fa-linkedin"></i></a>
-                            </li>
                             <li class="youtube hvr-pulse">
                                 <a href="#"><i class="fa fa-youtube"></i></a>
                             </li>
                             <li class="instagram hvr-pulse">
                                 <a href="#"><i class="fa fa-instagram"></i></a>
                             </li>
-                            <li class="behance hvr-pulse">
-                                <a href="#"><i class="fa fa-behance"></i></a>
-                            </li>
-                            <li class="dribbble hvr-pulse">
-                                <a href="#"><i class="fa fa-dribbble"></i></a>
-                            </li>
                         </ul>
                         <p class="copyright">
-                        &copy; Copyright 2015 KreFolio - All Rights reserved</p>
+                        © Copyright 2017 SchwenkTheWorld - All Rights reserved</p>
                     </div>
                 </div>
             </div>
