--- a/krefolio/index.html
+++ b/krefolio/index.html
@@ -165,7 +165,7 @@ Becoming a Schwenker <span class="light-text main-color">The ultimate guide</spa
                                                                                     <i class="icon-idea"></i>
                                                                                 </div>
                                                                                 <h4>How to organise a Schwenk?</h4>
-                                                                                <p>Suspendisse velit ticol sodales, viverra sigirton vitae, accumsan orci mauris nec</p>
+                                                                                <p>What do you need to organise a real Schwenk.</p>
                                                                             </div>
                                                                         </div>
                                                                         <!-- *****  Service Single ***** -->
@@ -175,7 +175,7 @@ Becoming a Schwenker <span class="light-text main-color">The ultimate guide</spa
                                                                                     <i class="icon-heart"></i>
                                                                                 </div>
                                                                                 <h4>What to Schwenk?</h4>
-                                                                                <p>Suspendisse velit ticol sodales, viverra sigirton vitae, accumsan orci mauris nec</p>
+                                                                                <p>You will get some jummy recipies, to know what you can Schwenk.</p>
                                                                             </div>
                                                                         </div>
                                                                         <!-- *****  Service Single ***** -->
@@ -185,7 +185,7 @@ Becoming a Schwenker <span class="light-text main-color">The ultimate guide</spa
                                                                                     <i class="icon-office"></i>
                                                                                 </div>
                                                                                 <h4><b>Where to publish your photos?</b></h4>
-                                                                                <p>Suspendisse velit ticol sodales, viverra sigirton vitae, accumsan orci mauris nec</p>
+                                                                                <p>We will explain you where to share your experiances and photos.
                                                                             </div>
                                                                         </div>
                                                                         <!-- *****  Service Single ***** -->
@@ -195,7 +195,7 @@ Becoming a Schwenker <span class="light-text main-color">The ultimate guide</spa
                                                                                     <i class="icon-mobile"></i>
                                                                                 </div>
                                                                                 <h4><b>How to get a Schwenker</b></h4>
-                                                                                <p>Suspendisse velit ticol sodales, viverra sigirton vitae, accumsan orci mauris nec</p>
+                                                                                <p>This is one of the most important points, we send you the ultimate Schwenker building tutorial.</p>
                                                                             </div>
                                                                         </div>
                                                                     </div>
@@ -295,7 +295,8 @@ Becoming a Schwenker <span class="light-text main-color">The ultimate guide</spa
                     <div class="line main-bg"></div>
                     <div class="col-md-10 col-md-offset-1">
                         <div class="subtitle">Check out some of our greatest Schwenks.</div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium, illum, soluta. Minima vitae laudantium, sint officiis repellendus. Minima vitae laudantium, sint officiis repellendus</p>
+                        <p>Traveling the world on a Schwenking missio - In order to convince every human being on the planet, we are travelling the world and schwenk to convert the people.
+See here some exaples of our glorious missions.</p>
                     </div>
                 </div>                 
                 <!-- *** end row *** -->
@@ -333,12 +334,10 @@ Becoming a Schwenker <span class="light-text main-color">The ultimate guide</spa
                 <div class="portfolio-item print">
                     <div class="portfolio">
                         <a href="img/portfolio/portfolio-1.jpg" data-lightbox-gallery="portfolio">
-                            <img src="img/portfolio/portfolio-1.jpg" alt="Portfolio 1" />
+                            <img src="img/LegalizeTheSchwenking.png" alt="Portfolio 1" />
                             <!-- END PORTFOLIO IMAGE -->
                             <div class="portfolio-overlay hvr-rectangle-out">
-                                <h2 class="margin-bottom-small">
-                                Our<strong class="white-color bold-text">Portfolios</strong></h2>
-                                <div class="button">View Project</div>
+                                <h2 class="margin-bottom-small">The first song about Schwenking, written by Doc Savage, our friends from the Schwenking capital Saarbruecken.</h2>
                             </div>
                             <!-- END PORTFOLIO OVERLAY -->
                         </a>
@@ -354,9 +353,7 @@ Becoming a Schwenker <span class="light-text main-color">The ultimate guide</spa
                             <img src="img/portfolio/portfolio-2.jpg" alt="Portfolio 2" />
                             <!-- END PORTFOLIO IMAGE -->
                             <div class="portfolio-overlay hvr-rectangle-out">
-                                <h2 class="margin-bottom-small">
-                            Cute<strong class="white-color bold-text">Kittens</strong></h2>
-                                <div class="button">View Project</div>
+                                <h2 class="margin-bottom-small">Schwenk Africa - To be more exact, Bernhard went to Camarun to Schwenk Bonaberi.</h2>
                             </div>
                             <!-- END PORTFOLIO OVERLAY -->
                         </a>
@@ -372,9 +369,7 @@ Becoming a Schwenker <span class="light-text main-color">The ultimate guide</spa
                             <img src="img/portfolio/portfolio-3.jpg" alt="Portfolio 1" />
                             <!-- END PORTFOLIO IMAGE -->
                             <div class="portfolio-overlay hvr-rectangle-out">
-                                <h2 class="margin-bottom-small">
-                            Our<strong class="white-color bold-text">Portfolios</strong></h2>
-                                <div class="button">View Project</div>
+                                <h2 class="margin-bottom-small">SCHWENKING IN TOKYO, JAPAN - See how the SchwenkTheWorld movement started far away from its roots. </h2>
                             </div>
                             <!-- END PORTFOLIO OVERLAY -->
                         </a>
