--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@ Becoming a Schwenker <span class="light-text main-color">The ultimate guide</spa
                     <div class="line main-bg"></div>
                     <div class="col-md-10 col-md-offset-1">
                         <div class="subtitle">Check out some of our greatest Schwenks.</div>
-                        <p>Traveling the world on a Schwenking missio - In order to convince every human being on the planet, we are travelling the world and schwenk to convert the people.
+                        <p>Traveling the world on a Schwenking mission - In order to convince every human being on the planet, we are travelling the world and schwenk to convert the people.
 See here some exaples of our glorious missions.</p>
                     </div>
                 </div>                 
@@ -307,19 +307,19 @@ See here some exaples of our glorious missions.</p>
                             <a href="#" data-filter="*" class="active"><i class="icon-grid"></i></a>
                         </li>
                         <li>
-                            <a href="#" data-filter=".print">Print Media</a>
+                            <a href="#" data-filter=".print">Europe</a>
                         </li>
                         <li>
-                            <a href="#" data-filter=".icon">Icon Design</a>
+                            <a href="#" data-filter=".icon">America</a>
                         </li>
                         <li>
-                            <a href="#" data-filter=".photography">Photography</a>
+                            <a href="#" data-filter=".photography">Africa</a>
                         </li>
                         <li>
-                            <a href="#" data-filter=".web-design">Web Design</a>
+                            <a href="#" data-filter=".web-design">Australia</a>
                         </li>
                         <li>
-                            <a href="#" data-filter=".ui">UI</a>
+                            <a href="#" data-filter=".ui">Asia</a>
                         </li>
                     </ul>
                 </div>                 
@@ -334,10 +334,11 @@ See here some exaples of our glorious missions.</p>
                 <div class="portfolio-item print">
                     <div class="portfolio">
                         <a href="img/portfolio/portfolio-1.jpg" data-lightbox-gallery="portfolio">
-                            <img src="img/LegalizeTheSchwenking.png" alt="Portfolio 1" />
+                            <img src="img/Projekts/alle.jpg" alt="Portfolio 1" />
                             <!-- END PORTFOLIO IMAGE -->
                             <div class="portfolio-overlay hvr-rectangle-out">
-                                <h2 class="margin-bottom-small">The first song about Schwenking, written by Doc Savage, our friends from the Schwenking capital Saarbruecken.</h2>
+                                <h2 class="margin-bottom-small">Legalize the Schwenking</h2>
+                                <p>The first song about Schwenking, written by Doc Savage, our friends from the Schwenking capital Saarbruecken.</p>
                             </div>
                             <!-- END PORTFOLIO OVERLAY -->
                         </a>
@@ -350,10 +351,11 @@ See here some exaples of our glorious missions.</p>
                 <div class="portfolio-item photography">
                     <div class="portfolio">
                         <a href="img/portfolio/portfolio-2.jpg" data-lightbox-gallery="portfolio">
-                            <img src="img/portfolio/portfolio-2.jpg" alt="Portfolio 2" />
+                            <img src="img/Projekts/bonaberi.jpg" alt="Portfolio 2" />
                             <!-- END PORTFOLIO IMAGE -->
                             <div class="portfolio-overlay hvr-rectangle-out">
-                                <h2 class="margin-bottom-small">Schwenk Africa - To be more exact, Bernhard went to Camarun to Schwenk Bonaberi.</h2>
+                                <h2 class="margin-bottom-small">Schwenk Bonaberi, Africa</h2>
+                                <p>To be more exact, Bernhard went to Camarun to Schwenk Bonaberi.</p>
                             </div>
                             <!-- END PORTFOLIO OVERLAY -->
                         </a>
@@ -366,10 +368,12 @@ See here some exaples of our glorious missions.</p>
                 <div class="portfolio-item photography">
                     <div class="portfolio">
                         <a href="img/portfolio/portfolio-3.jpg" data-lightbox-gallery="portfolio">
-                            <img src="img/portfolio/portfolio-3.jpg" alt="Portfolio 1" />
+                            <img src="img/Projekts/tokyoSchwenk.jpg" alt="Portfolio 1" />
                             <!-- END PORTFOLIO IMAGE -->
                             <div class="portfolio-overlay hvr-rectangle-out">
-                                <h2 class="margin-bottom-small">SCHWENKING IN TOKYO, JAPAN - See how the SchwenkTheWorld movement started far away from its roots. </h2>
+                                <h2 class="margin-bottom-small">SCHWENKING TOKYO, JAPAN</h2>
+                                <p>
+    See how the SchwenkTheWorld movement started far away from its roots. </p>
                             </div>
                             <!-- END PORTFOLIO OVERLAY -->
                         </a>
@@ -382,12 +386,12 @@ See here some exaples of our glorious missions.</p>
                 <div class="portfolio-item print">
                     <div class="portfolio">
                         <a href="img/portfolio/portfolio-4.jpg" data-lightbox-gallery="portfolio">
-                            <img src="img/portfolio/portfolio-4.jpg" alt="Portfolio 1" />
+                            <img src="img/Projekts/schwenkok.jpg" alt="Portfolio 1" />
                             <!-- END PORTFOLIO IMAGE -->
                             <div class="portfolio-overlay hvr-rectangle-out">
-                                <h2 class="margin-bottom-small">
-                            Our<strong class="white-color bold-text">Portfolios</strong></h2>
-                                <div class="button">View Project</div>
+                                <h2 class="margin-bottom-small">Schwenk Bangkok</h2>
+                                <p>
+    With the help of our friends from Bangkok Vanguards, we were able to Schwenk an non touristic part of Bangkok.</p>
                             </div>
                             <!-- END PORTFOLIO OVERLAY -->
                         </a>
@@ -400,12 +404,12 @@ See here some exaples of our glorious missions.</p>
                 <div class="portfolio-item ui">
                     <div class="portfolio">
                         <a href="img/portfolio/portfolio-5.jpg" data-lightbox-gallery="portfolio">
-                            <img src="img/portfolio/portfolio-5.jpg" alt="Portfolio 1" />
+                            <img src="img/Projekts/SchwenkDEiffel.jpg" alt="Portfolio 1" />
                             <!-- END PORTFOLIO IMAGE -->
                             <div class="portfolio-overlay hvr-rectangle-out">
-                                <h2 class="margin-bottom-small">
-                            Our<strong class="white-color bold-text">Portfolios</strong></h2>
-                                <div class="button">View Project</div>
+                                <h2 class="margin-bottom-small">Schwenk Eiffeltower</h2>
+                                <p>
+    Invited from our french ambassadors, we schwenked almost under the Eiffeltower.</p>
                             </div>
                             <!-- END PORTFOLIO OVERLAY -->
                         </a>
@@ -418,12 +422,12 @@ See here some exaples of our glorious missions.</p>
                 <div class="portfolio-item web-design">
                     <div class="portfolio">
                         <a href="img/portfolio/portfolio-6.jpg" data-lightbox-gallery="portfolio">
-                            <img src="img/portfolio/portfolio-6.jpg" alt="Portfolio 1" />
+                            <img src="img/Projekts/Schwenk4_RomainAlary.jpg" alt="Portfolio 1" />
                             <!-- END PORTFOLIO IMAGE -->
                             <div class="portfolio-overlay hvr-rectangle-out">
-                                <h2 class="margin-bottom-small">
-                            Our<strong class="white-color bold-text">Portfolios</strong></h2>
-                                <div class="button">View Project</div>
+                                <h2 class="margin-bottom-small">Schwenk Florentin - Israel</h2>
+                                <p>
+    This time we went to Tel Aviv, to finally Schwenk Israel.</p>
                             </div>
                             <!-- END PORTFOLIO OVERLAY -->
                         </a>
@@ -436,12 +440,12 @@ See here some exaples of our glorious missions.</p>
                 <div class="portfolio-item web-design">
                     <div class="portfolio">
                         <a href="img/portfolio/portfolio-7.jpg" data-lightbox-gallery="portfolio">
-                            <img src="img/portfolio/portfolio-7.jpg" alt="Portfolio 1" />
+                            <img src="img/Projekts/schwenkthecamp-MARE.jpg" alt="Portfolio 1" />
                             <!-- END PORTFOLIO IMAGE -->
                             <div class="portfolio-overlay hvr-rectangle-out">
-                                <h2 class="margin-bottom-small">
-                            Our<strong class="white-color bold-text">Portfolios</strong></h2>
-                                <div class="button">View Project</div>
+                                <h2 class="margin-bottom-small">Schwenk The Camp - Marseille</h2>
+                                <p>
+    Invited by our friends from YES WE CAMP, we went to schwenk the camp in Marseille.</p>
                             </div>
                             <!-- END PORTFOLIO OVERLAY -->
                         </a>
@@ -454,12 +458,12 @@ See here some exaples of our glorious missions.</p>
                 <div class="portfolio-item icon">
                     <div class="portfolio">
                         <a href="img/portfolio/portfolio-8.jpg" data-lightbox-gallery="portfolio">
-                            <img src="img/portfolio/portfolio-8.jpg" alt="Portfolio 1" />
+                            <img src="img/Projekts/lapaz.jpg" alt="Portfolio 1" />
                             <!-- END PORTFOLIO IMAGE -->
                             <div class="portfolio-overlay hvr-rectangle-out">
-                                <h2 class="margin-bottom-small">
-                            Our<strong class="white-color bold-text">Portfolios</strong></h2>
-                                <div class="button">View Project</div>
+                                <h2 class="margin-bottom-small">Schwenk La Paz</h2>
+                                <p>
+    One of our Chief Schwenkers, Stephan, went to La Paz and schwenked it.</p>
                             </div>
                             <!-- END PORTFOLIO OVERLAY -->
                         </a>
