--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@ See here some exaples of our glorious missions.</p>
             ============================== -->
                 <div class="portfolio-item print">
                     <div class="portfolio">
-                        <a href="img/portfolio/portfolio-1.jpg" data-lightbox-gallery="portfolio">
+                        <a href="img/Projekts/alle.jpg" data-lightbox-gallery="portfolio">
                             <img src="img/Projekts/alle.jpg" alt="Portfolio 1" />
                             <!-- END PORTFOLIO IMAGE -->
                             <div class="portfolio-overlay hvr-rectangle-out">
@@ -350,7 +350,7 @@ See here some exaples of our glorious missions.</p>
             ============================== -->
                 <div class="portfolio-item photography">
                     <div class="portfolio">
-                        <a href="img/portfolio/portfolio-2.jpg" data-lightbox-gallery="portfolio">
+                        <a href="img/Projekts/bonaberi.jpg" data-lightbox-gallery="portfolio">
                             <img src="img/Projekts/bonaberi.jpg" alt="Portfolio 2" />
                             <!-- END PORTFOLIO IMAGE -->
                             <div class="portfolio-overlay hvr-rectangle-out">
@@ -367,7 +367,7 @@ See here some exaples of our glorious missions.</p>
             ============================== -->
                 <div class="portfolio-item photography">
                     <div class="portfolio">
-                        <a href="img/portfolio/portfolio-3.jpg" data-lightbox-gallery="portfolio">
+                        <a href="img/Projekts/tokyoSchwenk.jpg" data-lightbox-gallery="portfolio">
                             <img src="img/Projekts/tokyoSchwenk.jpg" alt="Portfolio 1" />
                             <!-- END PORTFOLIO IMAGE -->
                             <div class="portfolio-overlay hvr-rectangle-out">
@@ -385,7 +385,7 @@ See here some exaples of our glorious missions.</p>
             ============================== -->
                 <div class="portfolio-item print">
                     <div class="portfolio">
-                        <a href="img/portfolio/portfolio-4.jpg" data-lightbox-gallery="portfolio">
+                        <a href="img/Projekts/schwenkok.jpg" data-lightbox-gallery="portfolio">
                             <img src="img/Projekts/schwenkok.jpg" alt="Portfolio 1" />
                             <!-- END PORTFOLIO IMAGE -->
                             <div class="portfolio-overlay hvr-rectangle-out">
@@ -403,7 +403,7 @@ See here some exaples of our glorious missions.</p>
             ============================== -->
                 <div class="portfolio-item ui">
                     <div class="portfolio">
-                        <a href="img/portfolio/portfolio-5.jpg" data-lightbox-gallery="portfolio">
+                        <a href="img/Projekts/SchwenkDEiffel.jpg" data-lightbox-gallery="portfolio">
                             <img src="img/Projekts/SchwenkDEiffel.jpg" alt="Portfolio 1" />
                             <!-- END PORTFOLIO IMAGE -->
                             <div class="portfolio-overlay hvr-rectangle-out">
@@ -421,7 +421,7 @@ See here some exaples of our glorious missions.</p>
             ============================== -->
                 <div class="portfolio-item web-design">
                     <div class="portfolio">
-                        <a href="img/portfolio/portfolio-6.jpg" data-lightbox-gallery="portfolio">
+                        <a href="img/Projekts/Schwenk4_RomainAlary.jpg" data-lightbox-gallery="portfolio">
                             <img src="img/Projekts/Schwenk4_RomainAlary.jpg" alt="Portfolio 1" />
                             <!-- END PORTFOLIO IMAGE -->
                             <div class="portfolio-overlay hvr-rectangle-out">
@@ -439,7 +439,7 @@ See here some exaples of our glorious missions.</p>
             ============================== -->
                 <div class="portfolio-item web-design">
                     <div class="portfolio">
-                        <a href="img/portfolio/portfolio-7.jpg" data-lightbox-gallery="portfolio">
+                        <a href="img/Projekts/schwenkthecamp-MARE.jpg" data-lightbox-gallery="portfolio">
                             <img src="img/Projekts/schwenkthecamp-MARE.jpg" alt="Portfolio 1" />
                             <!-- END PORTFOLIO IMAGE -->
                             <div class="portfolio-overlay hvr-rectangle-out">
@@ -457,7 +457,7 @@ See here some exaples of our glorious missions.</p>
             ============================== -->
                 <div class="portfolio-item icon">
                     <div class="portfolio">
-                        <a href="img/portfolio/portfolio-8.jpg" data-lightbox-gallery="portfolio">
+                        <a href="img/Projekts/lapaz.jpg" data-lightbox-gallery="portfolio">
                             <img src="img/Projekts/lapaz.jpg" alt="Portfolio 1" />
                             <!-- END PORTFOLIO IMAGE -->
                             <div class="portfolio-overlay hvr-rectangle-out">
