--- a/index.html
+++ b/index.html
@@ -128,7 +128,9 @@
 </div>
                         <div class="carousel-caption">
                             <h1 class="light margin-bottom-medium mat-none"><font face="Campton Bold, sans-serif"><b>Schwenk The World</b></font></h1>
-                            <p class="light margin-bottom-medium">Help Us to Spread the <a href="https://en.wikipedia.org/wiki/Schwenker" target="_blank">Saarlandisch</a> BBQ Culture called "Schwenken" Join the Schwenking way of life.</p>
+                            <p class="light margin-bottom-medium">Schwenken is the Culture of a small country in the heart of Europe called Saarland.
+It is more than just a way of doing BBQ. It is a way of life!
+    Help Us to Spread the <a href="https://en.wikipedia.org/wiki/Schwenker" target="_blank">Saarlandisch</a> BBQ Culture called "Schwenken" Join the Schwenking way of life.</p>
                             <div class="call-button">
                                 <div class="row">
                                     <div class="col-md-4 col-md-offset-2 col-sm-4 col-sm-offset-2 col-xs-12">
@@ -509,24 +511,21 @@ See here some exaples of our glorious missions.</p>
                         ============================== -->
                             <div class="item"> 
                                 <!-- ITEM START -->
-                                <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit..</p>
+                                <p>The guys from SchwenkTheWorld.com wants to spread the schwenking culture all over the world.</p>
                                 <div class="client margin-top-medium">
-                                    <img src="img/testimonial/testimonial-2.jpg" alt="Client Image" class="grayscale">
                                     <ul class="client-info main-color">
-                                        <li>John Doe</li>
-                                        <li>Co-Founder, Envato</li>
+                                        <li>Alwin Theobald</li>
+                                        <li>Eppelblog</li>
                                     </ul>
                                 </div>
                             </div>                             
                             <!-- ITEM END -->
                             <div class="item"> 
                                 <!-- ITEM START -->
-                                <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit..</p>
+                                <p>If you want a small culinary adventure into the land of new flavor and tender, evenly roasted meat, try schwenker. Schwenk the World, baby!</p>
                                 <div class="client margin-top-medium">
-                                    <img src="img/testimonial/testimonial-1.jpg" alt="Client Image" class="grayscale">
                                     <ul class="client-info main-color">
-                                        <li>John Doe</li>
-                                        <li>Co-Founder, Envato</li>
+                                        <li>MeatFireGood.com</li>
                                     </ul>
                                 </div>
                             </div>                             
@@ -536,12 +535,11 @@ See here some exaples of our glorious missions.</p>
                         ============================== -->
                             <div class="item"> 
                                 <!-- ITEM START -->
-                                <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit..</p>
+                                <p>My new favorite grill goes by an odd name: the schwenker. And its setup is just as peculiar. Derived from the German term for “swivel,” its name alludes to the swinging action of the grate, which dangles over a fire from a massive tripod.</p>
                                 <div class="client margin-top-medium">
-                                    <img src="img/testimonial/testimonial-2.jpg" alt="Client Image" class="grayscale">
                                     <ul class="client-info main-color">
-                                        <li>John Doe</li>
-                                        <li>Co-Founder, Envato</li>
+                                        <li>Sal Vaglica</li>
+                                        <li>Saveur.com</li>
                                     </ul>
                                 </div>
                             </div>                             
