--- a/index.html
+++ b/index.html
@@ -549,12 +549,12 @@ See here some exaples of our glorious missions.</p>
                         ============================== -->
                             <div class="item"> 
                                 <!-- ITEM START -->
-                                <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit..</p>
+                                <p>Schwenk the World (too weird to explain—you have to see for yourself...)</p>
                                 <div class="client margin-top-medium">
-                                    <img src="img/testimonial/testimonial-1.jpg" alt="Client Image" class="grayscale">
+                                    <img src="img/Projekts/15034_200.png" alt="Client Image" class="grayscale">
                                     <ul class="client-info main-color">
-                                        <li>John Doe</li>
-                                        <li>Co-Founder, Envato</li>
+                                        <li>Kurt Schwenk</li>
+                                        <li>Professor of Ecology and Evolutionary Biology (Ph.D., University of California, Berkeley)</li>
                                     </ul>
                                 </div>
                             </div>                             
