--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@ Becoming a Schwenker <span class="light-text main-color">The ultimate guide</spa
                     <div class="line main-bg"></div>
                     <div class="col-md-10 col-md-offset-1">
                         <div class="subtitle">Check out some of our greatest Schwenks.</div>
-                        <p>Traveling the world on a Schwenking mission - In order to convince every human being on the planet, we are travelling the world and schwenk to convert the people.
+                        <p style="color:#000">Traveling the world on a Schwenking mission - In order to convince every human being on the planet, we are travelling the world and schwenk to convert the people.
 See here some exaples of our glorious missions.</p>
                     </div>
                 </div>                 
