--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- SITE TITLE -->
-        <title>KreFolio - Startup Agency Landing Page Template</title>
+        <title>SchwenkTheWorld - More than just a BBQ</title>
         <!-- =========================
        Meta Information
     ============================== -->
-        <meta name="description" content="KreFolio - Startup Agency Landing Page Template">
-        <meta name="keywords" content="KreFolio, KreFolio html template, Free Bootstrap template, Responsive onepage template">
-        <meta name="author" content="Zahidul Hossain @choyan">
+        <meta name="description" content="Schwenk The World - Website about the Saarlandish BBQ culture called schwenken">
+        <meta name="keywords" content="Schwenken, Schwenker, BBQ, Saarland, Schwenking, SchwenkTheWorld, Schwenk The World">
+        <meta name="author" content="Bjoern Gottschall">
         <!-- =========================
        favicon and app touch icon
     ============================== -->
@@ -75,23 +75,17 @@
                 <li data-rel="#header">
                     <span class="nav-label">Home</span>
                 </li>
-                <li data-rel="#about-us">
-                    <span class="nav-label">About Us</span>
-                </li>
-                <li data-rel="#why-choose-us">
-                    <span class="nav-label">Why Choose Us</span>
-                </li>
-                <li data-rel="#our-team">
-                    <span class="nav-label">Our Team</span>
+                <li data-rel="#portfolio">
+                    <span class="nav-label">Portfolio</span>
                 </li>
                 <li data-rel="#testimonial">
                     <span class="nav-label">Testimonial</span>
                 </li>
-                <li data-rel="#portfolio">
-                    <span class="nav-label">Portfolio</span>
+                <li data-rel="#map">
+                    <span class="nav-label">Where?</span>
                 </li>
                 <li data-rel="#map">
-                    <span class="nav-label">Contact Us</span>
+                    <span class="nav-label">Get a Schwenker</span>
                 </li>
             </ul>
         </div>         
