--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ Becoming a Schwenker <span class="light-text main-color">The ultimate guide</spa
                         <p class="light-text">I cannot wait, how can I get a Schwenker?</p>
                     </div>
                     <div class="col-md-4 col-sm-4 col-xs-12 button-container wow slideInRight animated">
-                        <a href="#portfolio" class="button light internal-link pull-left hvr-grow" data-rel="#portfolio">Get A Schwenker</a>
+                        <a href="/schwenker.html" class="button light internal-link pull-left hvr-grow">Get A Schwenker</a>
                     </div>
                     <div class="clearfix"></div>
                 </div>
@@ -283,7 +283,7 @@ Becoming a Schwenker <span class="light-text main-color">The ultimate guide</spa
         <!-- =========================
        Portfolio
     ============================== -->
-        <section id="portfolio" class="portfolio padding-large text-center">
+        <section id="portfolio" class="portfolio padding-large text-center" data-pgc-define="porto" data-pgc-edit="porto">
             <div class="container margin-bottom-medium">
                 <div class="row margin-bottom-medium wow fadeInUp">
                     <h2>
@@ -323,7 +323,7 @@ See here some exaples of our glorious missions.</p>
             </div>             
             <!-- *** end container *** -->
             <!-- *****  Portfolio  wrapper ***** -->
-            <div class="portfolio-wrapper margin-bottom-medium">
+            <div class="portfolio-wrapper margin-bottom-medium" data-pgc-edit>
                 <!-- =========================
                Portfolio item
             ============================== -->
@@ -363,8 +363,8 @@ See here some exaples of our glorious missions.</p>
             ============================== -->
                 <div class="portfolio-item photography">
                     <div class="portfolio">
-                        <a href="img/Projekts/tokyoSchwenk.jpg" data-lightbox-gallery="portfolio">
-                            <img src="img/Projekts/tokyoSchwenk.jpg" alt="Portfolio 1" />
+                        <a href="img/Projekts/tokyo/tokyoSchwenk.jpg" data-lightbox-gallery="portfolio">
+                            <img src="img/Projekts/tokyo/tokyoSchwenk.jpg" alt="Portfolio 1" />
                             <!-- END PORTFOLIO IMAGE -->
                             <div class="portfolio-overlay hvr-rectangle-out">
                                 <h2 class="margin-bottom-small">SCHWENKING TOKYO, JAPAN</h2>
@@ -624,16 +624,16 @@ See here some exaples of our glorious missions.</p>
                         <figure class="margin-bottom-medium">
                             <h2>SchwenkTheWorld</h2>
                         </figure>
-                        <p class="margin-bottom-medium">If you like this project if you want to be a part of it, downlaod the ultimate guide and start schwenking and share it with the Hashtag #schwenktheworld</p>
+                        <p class="margin-bottom-medium">If you like this project if you want to be a part of it, download the ultimate guide and start schwenking and share it with the Hashtag #schwenktheworld</p>
                         <!-- =========================
                        Social icons
                     ============================== -->
                         <ul class="social margin-bottom-medium">
                             <li class="facebook hvr-pulse">
-                                <a href="#"><i class="fa fa-facebook"></i></a>
+                                <a href="https://www.facebook.com/SchwenkTheWorld" target="_blank"><i class="fa fa-facebook"></i></a>
                             </li>
                             <li class="youtube hvr-pulse">
-                                <a href="#"><i class="fa fa-youtube"></i></a>
+                                <a href="https://www.youtube.com/user/SchwenkTheWorld" target="_blank"><i class="fa fa-youtube"></i></a>
                             </li>
                             <li class="instagram hvr-pulse">
                                 <a href="#"><i class="fa fa-instagram"></i></a>
